k8s-example/wordpress-mysql/k8s/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: wordpress
  labels:
    app: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      - name: mariadb
        image: mariadb:10.6.4-focal
        ports:
          - containerPort: 3306
          - containerPort: 33060
---
apiVersion: v1
kind: Service
metadata:
  name: cluster-ip-service
  namespace: wordpress
spec:
  selector:
    app: mariadb
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
