k8s-example/wordpress-mysql/k8s/wordpress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  namespace: wordpress
  labels:
    app: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
      - name: wordpress
        image: wordpress:latest
        ports:
          - containerPort: 80
        volumeMounts:
        - name: wp-pvc
          mountPath: /code
      volumes:
        - name: wp-pvc
          persistentVolumeClaim:
            claimName: wp-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: cluster-ip-service-wordpress
  namespace: wordpress
spec:
  selector:
    app: wordpress
  ports:
    - protocol: TCP
      port: 8080
      targetPort:  80
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: wordpress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: wordpress.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cluster-ip-service-wordpress
            port:
              number: 8080
